frame/support/test/tests/storage_alias_ui/checks_for_valid_storage_type.rs
#[frame_support::storage_alias]
type Ident = StorageValue<hello::World, u32>;

fn main() {}
